# PicoRV32_BasicProject

./: .gitignore  .gitmodules  README.md
cmod_s7_impl/: test.xpr
cmod_s7_impl/test.cache/wt/: synthesis.wdf  webtalk_pa.xml
cmod_s7_impl/test.hw/hw_1/: hw.xml
cmod_s7_impl/test.runs/.jobs/: vrs_config_4.xml  vrs_config_5.xml  vrs_config_7.xml  vrs_config_8.xml
cmod_s7_impl/test.runs/impl_1/: .place_design.begin.rst  .vivado.begin.rst  .write_bitstream.begin.rst  gen_run.xml  init_design.pb  opt_design.pb  phys_opt_design.pb  place_design.pb  project.wdf  route_design.pb  rundef.js  runme.sh  test.bit  test.tcl  test.vdi  test_4224.backup.vdi  test_bus_skew_routed.rpt  test_bus_skew_routed.rpx  test_clock_utilization_routed.rpt  test_control_sets_placed.rpt  test_drc_opted.rpt  test_drc_routed.rpt  test_io_placed.rpt  test_methodology_drc_routed.rpt  test_methodology_drc_routed.rpx  test_opt.dcp  test_physopt.dcp  test_placed.dcp  test_power_routed.rpt  test_power_routed.rpx  test_power_summary_routed.pb  test_routed.dcp  test_timing_summary_routed.pb  test_timing_summary_routed.rpt  test_timing_summary_routed.rpx  test_utilization_placed.rpt  vivado.jou  vivado.pb  vivado_4224.backup.jou  write_bitstream.pb
cmod_s7_impl/test.runs/synth_1/: .vivado.begin.rst  gen_run.xml  rundef.js  runme.sh  test.dcp  test.tcl  test.vds  test_utilization_synth.pb  test_utilization_synth.rpt  vivado.jou  vivado.pb
cmod_s7_impl/test.runs/synth_1/.Xil/: test_propImpl.xdc
cmod_s7_impl/test.srcs/constrs_1/new/: test_io.xdc
cmod_s7_impl/test.srcs/sources_1/imports/vivado/: system.v
cmod_s7_impl/test.srcs/sources_1/new/: clock_divider.vhd  cpu_uart.v  selector.v  test.vhd  top.v
cmod_s7_impl/test.srcs/utils_1/imports/synth_1/: test.dcp
cmod_s7_io/: test_io.xpr
cmod_s7_io/test_io.srcs/constrs_1/new/: io_cmod_s7.xdc
software/: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  configure~  firmware.S  firmware.asm  firmware.c
software/c_autotools/: Makefile.am  Makefile.in  README.md
software/c_autotools/src/: .gitignore  README.md  firmware.c  firmware.lds
software/c_make/: Makefile
software/src/: Makefile  README.md  firmware.c
